[workspace]

resolver = "2"

members = ["tests", "tain"]

default-members = ["tain"]

[workspace.dependencies]
anyhow = "1.0"
postgres = "0.19"
tokio = { version = "1.38", features = ["full"] }
testcontainers = { version = "0.20.0", features = ["blocking"] }
#testcontainers = { path = "../../3/testcontainers-rs/testcontainers" }
fake = "2.9.2"
