[workspace]

resolver = "3"

members = ["tests", "tain", "tain-cli"]

default-members = ["tain"]

[workspace.dependencies]
log = "0.4"
dirs = "6.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typed-builder = "0.21"
dotenvy = "0.15"
structopt = "0.3"

tain = { path = "tain" }
