[package]
name = "tain"
version = "0.3.0"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Request container"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/tain"
repository = "https://github.com/VladasZ/tain"

[dependencies]
fake = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true }
